--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 body {
-  background-color: #55b491;
+  background-color: white;
+  color: teal;
+  font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 40px auto;
+  padding: 0 10px;
+}
+
+h1,
+h2,
+h3 {
+  line-height: 1.2;
+}
+
+.parent {
+  display: grid;
+
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+  gap: 1em;
 }
