--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: white;
-  color: teal;
+  color: rgb(0, 73, 73);
   font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 40px auto;
@@ -15,8 +15,30 @@ h3 {
 
 .parent {
   display: grid;
-
   grid-template-columns: 1fr 1fr;
-  text-align: center;
-  gap: 1em;
+  gap: 1rem;
+}
+
+.card-container {
+  box-shadow: 0 0 20px -10px teal;
+  display: grid;
+  align-items: center;
+  background: white;
+  width: 100%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  justify-content: space-between;
+}
+
+#array {
+  margin-bottom: 20px;
+}
+
+.submit-button {
+  background-color: rgb(0, 73, 73);
+  color: white;
 }
