--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ h3 {
 
 .parent {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 1rem;
 }
 
@@ -38,7 +38,13 @@ h3 {
   margin-bottom: 20px;
 }
 
-.submit-button {
+#submit-button {
   background-color: rgb(0, 73, 73);
   color: white;
+  margin-bottom: 20px;
+}
+
+.wrapper {
+  margin-left: 50%;
+  margin-right: 50%;
 }
